recursiveMove() ==> cells are colored in gold, canMove cells in yellow

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,10 +5,14 @@
         <link rel="stylesheet" type="text/css" href="main.css" />
     </head>
     <body>
-        <h3>Mouse: <span id="output"></span></h3>
-        <h3>x: <span id="x">0</span></h3>
-        <h3>y: <span id="y">0</span></h3>
+        <fieldset>
+            <legend>Controls</legend>
+            <input type="button" id="test" value="Test" onclick="test();">
+        </fieldset>
+        <p><b>Mouse:</b> <span id="output"></span></p>
+        x: <span id="x">0</span> <br>y: <span id="y">0</span>
         <canvas id="canvas" width="400" height="400"></canvas>
         <script type="text/javascript" src="main.js"></script>
+        <script type="text/javascript" src="utils.js"></script>
     </body>
 </html>
