Shuffle function, first try
Swapping of cells works, however a unsolvable puzzle may result.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,6 +8,7 @@
         <fieldset>
             <legend>Controls</legend>
             <input type="button" id="test" value="Test" onclick="test();">
+            <input type="button" id="shuffle" value="Shuffle" onclick="shuffle();">
         </fieldset>
         <p><b>Mouse:</b> <span id="output"></span></p>
         x: <span id="x">0</span> <br>y: <span id="y">0</span>
